1. improve header for tumblr.com users - no more "_at_tumblr_com"! 2. Add "Tumblr" to "Local" and "Remote" in users control panel

--- a/locales/en-US.yml
+++ b/locales/en-US.yml
@@ -530,6 +530,7 @@ openImageInNewTab: "Open images in new tab"
 dashboard: "Dashboard"
 local: "Local"
 remote: "Remote"
+tumblr: "Tumblr"
 total: "Total"
 weekOverWeekChanges: "Changes to last week"
 dayOverDayChanges: "Changes to yesterday"
