add header message that says post is local-only, move strings to i18n

--- a/locales/en-US.yml
+++ b/locales/en-US.yml
@@ -1647,12 +1647,16 @@ _visibility:
   publicDescription: "Your post will be visible in all public timelines"
   home: "Unlisted"
   homeDescription: "Post to home timeline only"
+  homeHeader: "Only you can see this post"
   followers: "Followers"
   followersDescription: "Make visible to your followers and mentioned users only"
+  followersHeader: "Only followers can see this post"
   specified: "Direct"
   specifiedDescription: "Make visible for specified users only"
+  specifiedHeader: "Only mentioned people can see this post"
   localOnly: "Local only"
   localOnlyDescription: "Not visible to remote users"
+  localOnlyHeader: "Only people on this server can see this post"
 _postForm:
   replyPlaceholder: "Reply to this post..."
   quotePlaceholder: "Quote this post..."
