fix notifications of reblogs

--- a/locales/en-US.yml
+++ b/locales/en-US.yml
@@ -16,7 +16,7 @@ gotIt: "Got it!"
 cancel: "Cancel"
 noThankYou: "No thank you"
 enterUsername: "Enter username"
-renotedBy: "Boosted by {user}"
+renotedBy: "Reblogged by {user}"
 noNotes: "No posts"
 noNotifications: "No notifications"
 instance: "Server"
@@ -50,7 +50,7 @@ delete: "Delete"
 deleted: "Deleted"
 deleteAndEdit: "Delete and edit"
 deleteAndEditConfirm: "Are you sure you want to delete this post and edit it? You
-  will lose all reactions, boosts and replies to it."
+  will lose all reactions, reblogs and replies to it."
 editNote: "Edit note"
 edited: "Edited at {date} {time}"
 addToList: "Add to list"
@@ -110,11 +110,12 @@ followRequests: "Follow requests"
 unfollow: "Unfollow"
 followRequestPending: "Follow request pending"
 enterEmoji: "Enter an emoji"
-renote: "Boost"
-unrenote: "Take back boost"
-renoted: "Boosted."
-cantRenote: "This post can't be boosted."
-cantReRenote: "A boost can't be boosted."
+renote: "Reblog"
+unrenote: "Take back reblog"
+renoted: "Reblogged."
+renotedAndCommented: "Reblogged and commented"
+cantRenote: "This post can't be reblogged."
+cantReRenote: "A Reblog can't be reblogged."
 quote: "Quote"
 pinnedNote: "Pinned post"
 pinned: "Pin to profile"
@@ -135,8 +136,8 @@ unmarkAsSensitive: "Unmark as NSFW"
 enterFileName: "Enter filename"
 mute: "Mute"
 unmute: "Unmute"
-renoteMute: "Mute boosts"
-renoteUnmute: "Unmute boosts"
+renoteMute: "Mute Reblogs"
+renoteUnmute: "Unmute Reblogs"
 block: "Block"
 unblock: "Unblock"
 suspend: "Suspend"
@@ -679,7 +680,7 @@ instanceMute: "Server Mutes"
 userSaysSomething: "{name} said something"
 userSaysSomethingReason: "{name} said {reason}"
 userSaysSomethingReasonReply: "{name} replied to a post containing {reason}"
-userSaysSomethingReasonRenote: "{name} boosted a post containing {reason}"
+userSaysSomethingReasonRenote: "{name} Reblogged a post containing {reason}"
 userSaysSomethingReasonQuote: "{name} quoted a post containing {reason}"
 makeActive: "Activate"
 display: "Display"
@@ -744,9 +745,9 @@ manageAccessTokens: "Manage access tokens"
 accountInfo: "Account Info"
 notesCount: "Number of posts"
 repliesCount: "Number of replies sent"
-renotesCount: "Number of boosts sent"
+renotesCount: "Number of Reblogs sent"
 repliedCount: "Number of replies received"
-renotedCount: "Number of boosts received"
+renotedCount: "Number of Reblogs received"
 followingCount: "Number of followed accounts"
 followersCount: "Number of followers"
 sentReactionsCount: "Number of sent reactions"
@@ -896,7 +897,7 @@ customCssWarn: "This setting should only be used if you know what it does. Enter
 global: "Global"
 recommended: "Recommended"
 squareAvatars: "Display squared avatars"
-seperateRenoteQuote: "Separate boost and quote buttons"
+seperateRenoteQuote: "Separate Reblog and quote buttons"
 sent: "Sent"
 received: "Received"
 searchResult: "Search results"
@@ -1360,7 +1361,7 @@ _wordMute:
   hard: "Hard"
   mutedNotes: "Muted posts"
 _instanceMute:
-  instanceMuteDescription: "This will mute any posts/boosts from the listed servers,
+  instanceMuteDescription: "This will mute any posts/Reblogs from the listed servers,
     including those of users replying to a user from a muted server."
   instanceMuteDescription2: "Separate with newlines"
   title: "Hides posts from listed servers."
@@ -1413,7 +1414,7 @@ _theme:
     hashtag: "Hashtag"
     mention: "Mention"
     mentionMe: "Mentions (Me)"
-    renote: "Boost"
+    renote: "Reblog"
     modalBg: "Modal background"
     divider: "Divider"
     scrollbarHandle: "Scrollbar handle"
@@ -2024,7 +2025,7 @@ _notification:
   youGotMention: "{name} mentioned you"
   youGotReply: "{name} replied to you"
   youGotQuote: "{name} quoted you"
-  youRenoted: "Boost from {name}"
+  youRenoted: "Reblog from {name}"
   youGotPoll: "{name} voted on your poll"
   youGotMessagingMessageFromUser: "{name} sent you a chat message"
   youGotMessagingMessageFromGroup: "A chat message was sent to the {name} group"
@@ -2035,14 +2036,15 @@ _notification:
   pollEnded: "Poll results have become available"
   emptyPushNotificationMessage: "Push notifications have been updated"
   reacted: "reacted to your post"
-  renoted: "boosted your post"
+  renoted: "reblogged your post"
+  renotedAndCommented: "and commented"
   voted: "voted on your poll"
   _types:
     all: "All"
     follow: "New followers"
     mention: "Mentions"
     reply: "Replies"
-    renote: "Boosts"
+    renote: "Reblogs"
     quote: "Quotes"
     reaction: "Reactions"
     pollVote: "Votes on polls"
@@ -2054,7 +2056,7 @@ _notification:
   _actions:
     followBack: "followed you back"
     reply: "Reply"
-    renote: "Boosts"
+    renote: "Reblog"
 _deck:
   alwaysShowMainColumn: "Always show main column"
   columnAlign: "Align columns"
